--- a/2021/day09/scratchwork.ipynb
+++ b/2021/day09/scratchwork.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7d5c1c53-6cbe-4c53-93d3-3dc5ba5c91af",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "cc1a022d-5e8b-4697-8940-71bb72f90f38",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "id": "97b12a2b-61ae-49a5-b172-7d930745f80b",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
        "504"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,8 +291,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "4a0c23fc-ea30-431d-98e5-a997bdcfcab4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1654"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from scipy import ndimage\n",
+    "\n",
+    "# floor = np.array(\n",
+    "#     [\n",
+    "#         [2, 1, 9, 9, 9, 4, 3, 2, 1, 0],\n",
+    "#         [3, 9, 8, 7, 8, 9, 4, 9, 2, 1],\n",
+    "#         [9, 8, 5, 6, 7, 8, 9, 8, 9, 2],\n",
+    "#         [8, 7, 6, 7, 8, 9, 6, 7, 8, 9],\n",
+    "#         [9, 8, 9, 9, 9, 6, 5, 6, 7, 8],\n",
+    "#     ]\n",
+    "# )\n",
+    "\n",
+    "floor = puz.grid\n",
+    "\n",
+    "mask = np.array([[0, 1, 0], [1, 1, 1], [0, 1, 0]])\n",
+    "\n",
+    "window_minima = ndimage.minimum_filter(floor, footprint=mask, mode=\"constant\", cval=9)\n",
+    "minima = floor[floor == window_minima]\n",
+    "sum(minima + 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0c6b2f48-935f-4e42-a667-198fe12fb40a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 1, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       ...,\n",
+       "       [0, 0, 0, ..., 0, 0, 1],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.where(floor == window_minima, 1, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f40fc80c-e7ee-4f21-ada1-7edabeba05e4",
    "metadata": {},
    "outputs": [],
    "source": []
