--- a/2021/day11/scratchwork.ipynb
+++ b/2021/day11/scratchwork.ipynb
@@ -2,21 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "id": "7d5c1c53-6cbe-4c53-93d3-3dc5ba5c91af",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The lab_black extension is already loaded. To reload it, use:\n",
-      "  %reload_ext lab_black\n",
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext lab_black\n",
     "%load_ext autoreload\n",
@@ -25,84 +14,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 28,
    "id": "cc1a022d-5e8b-4697-8940-71bb72f90f38",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "from puzzle import Puzzle, Navigation"
+    "from puzzle import Puzzle, Octopus"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 29,
    "id": "97b12a2b-61ae-49a5-b172-7d930745f80b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3515583998"
+       "Puzzle(fname='tests.txt')"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "puz = Puzzle(\"inputs.txt\")\n",
-    "puz.part_2()"
+    "puz = Puzzle(\"tests.txt\")\n",
+    "puz"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 30,
+   "id": "1c927e3d-54ac-4608-a506-0113ed2ee136",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1656"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "puz.part_1()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "aeaff76c-1613-4a16-914e-a1f3ea415606",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Navigation(raw='[({(<(())[]>[[{[]{<()<>>'),\n",
-       " Navigation(raw='[(()[<>])]({[<{<<[]>>('),\n",
-       " Navigation(raw='{([(<{}[<>[]}>{[]{[(<()>'),\n",
-       " Navigation(raw='(((({<>}<{<{<>}{[]{[]{}'),\n",
-       " Navigation(raw='[[<[([]))<([[{}[[()]]]'),\n",
-       " Navigation(raw='[{[{({}]{}}([{[{{{}}([]'),\n",
-       " Navigation(raw='{<[[]]>}<{[{[{[]{()[[[]'),\n",
-       " Navigation(raw='[<(<(<(<{}))><([]([]()'),\n",
-       " Navigation(raw='<{([([[(<>()){}]>(<<{{'),\n",
-       " Navigation(raw='<{([{{}}[<[[[<>{}]]]>[]]')]"
+       "[Octopus(row=0, col=8, nrg_level=2),\n",
+       " Octopus(row=1, col=8, nrg_level=1),\n",
+       " Octopus(row=1, col=9, nrg_level=1)]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "puz.lines"
+    "tmp = puz.octopi[9]\n",
+    "tmp.neighbors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "id": "b78fad31-7c9c-44c5-b826-111ea9c9c093",
+   "execution_count": 21,
+   "id": "37f6f676-5a27-4d8d-ab28-0bfb21405dcc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Navigation(raw='{([(<{}[<>[]}>{[]{[(<()>')"
+       "(0, 9)"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "tmp.row, tmp.col"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "9eb34007-d595-469d-a8e8-09d16381c1b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Octopus(row=0, col=8, nrg_level=2),\n",
+       " Octopus(row=1, col=8, nrg_level=1),\n",
+       " Octopus(row=1, col=9, nrg_level=1)]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp.get_neighbors(puz.octopi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b78fad31-7c9c-44c5-b826-111ea9c9c093",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def validate(my_string):\n",
     "    brackets = [\"()\", \"{}\", \"[]\", \"<>\"]\n",
@@ -124,21 +161,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "8f0be7de-532b-48aa-92be-0a8528ee587a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_string = \"<\"\n",
     "bool(set(my_string) & set(\"({[<\"))  # == set()"
@@ -146,85 +172,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "5c3b8050-07a1-439e-88c2-7f57819f92c7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('[[<[)<([', False, ')')"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "validate(\"[[<[([]))<([[{}[[()]]]\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "cc07952e-ff75-4eee-a5f2-b2ab7ed71383",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('[({([[{{', True, None)"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "validate(\"[({(<(())[]>[[{[]{<()<>>\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "bed4ca26-4444-46e6-be20-5df23fbfbd8b",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "find() takes at least 1 argument (0 given)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-39-05f3db035724>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;34m\"asdhf\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: find() takes at least 1 argument (0 given)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"asdhf\".find()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "1a146181-e20a-4259-afcf-7904f06743c1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Point(row=4, col=9)"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fname = \"tests.txt\"\n",
     "raw = Path(fname).open().readlines()\n",
@@ -243,25 +224,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "f48c9a12-d485-4971-9122-ff151f490ea8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 1, 0, 0, 0, 1, 1, 1, 1, 1],\n",
-       "       [1, 0, 1, 1, 1, 0, 1, 0, 1, 1],\n",
-       "       [0, 1, 1, 1, 1, 1, 0, 1, 0, 1],\n",
-       "       [1, 1, 1, 1, 1, 0, 1, 1, 1, 0],\n",
-       "       [0, 1, 0, 0, 0, 1, 1, 1, 1, 1]])"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "basins = np.where(grid == 9, 0, 1)\n",
     "basins"
@@ -269,21 +235,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "5d68164e-df14-4289-ad27-0b67ff6fcad6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0.,  3.,  9., 14.,  9.])"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from scipy.ndimage import measurements\n",
     "\n",
@@ -302,20 +257,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "id": "e2a7f23f-8dbf-4bd5-b0f7-91e245dcb340",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "All tests passed.\n",
-      "Part 1: 319329\n",
-      "Part 2: 3515583998\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "from dataclasses import dataclass, field\n",
@@ -422,21 +367,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "4a0c23fc-ea30-431d-98e5-a997bdcfcab4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1654"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from scipy import ndimage\n",
@@ -462,27 +396,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "0c6b2f48-935f-4e42-a667-198fe12fb40a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0, 0, 0, ..., 0, 0, 0],\n",
-       "       [0, 1, 0, ..., 0, 0, 0],\n",
-       "       [0, 0, 0, ..., 0, 0, 0],\n",
-       "       ...,\n",
-       "       [0, 0, 0, ..., 0, 0, 1],\n",
-       "       [0, 0, 0, ..., 0, 0, 0],\n",
-       "       [0, 0, 0, ..., 0, 0, 0]])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.where(floor == window_minima, 1, 0)"
    ]
