removed __post_init__() that wasn't needed & slightly cleaned up code

--- a/2021/day11/scratchwork.ipynb
+++ b/2021/day11/scratchwork.ipynb
@@ -257,86 +257,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "e2a7f23f-8dbf-4bd5-b0f7-91e245dcb340",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All tests passed.\n",
+      "Part 1: 1615\n",
+      "Part 2: 249\n"
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "from dataclasses import dataclass, field\n",
     "from statistics import median\n",
     "\n",
     "\n",
-    "T1_ANS = 26397\n",
-    "T2_ANS = 288957\n",
+    "T1_ANS = 1656\n",
+    "T2_ANS = 195\n",
     "\n",
     "\n",
     "@dataclass\n",
-    "class Navigation:\n",
-    "    raw: str\n",
-    "    incomplete: bool = field(default=None, repr=False)\n",
-    "    invalid: str = field(default=None, repr=False)\n",
+    "class Octopus:\n",
+    "    row: int\n",
+    "    col: int\n",
+    "    nrg_level: int\n",
+    "    has_fired: bool = field(default=False, repr=False)\n",
+    "    neighbors: list = field(default_factory=list, repr=False)\n",
+    "    total_flashes: int = 0\n",
     "\n",
     "    def __post_init__(self):\n",
-    "        self.validate()\n",
+    "        neighbors = self.get_neighbor_coords()\n",
     "        return\n",
     "\n",
-    "    def validate(self):\n",
-    "        \"\"\"Adapted from approach #3:\n",
-    "        https://www.geeksforgeeks.org/check-for-balanced-parentheses-in-python/\n",
-    "        \"\"\"\n",
-    "        my_string = self.raw\n",
-    "        brackets = [\"()\", \"{}\", \"[]\", \"<>\"]\n",
-    "        while any(pair in my_string for pair in brackets):\n",
-    "            for br in brackets:\n",
-    "                my_string = my_string.replace(br, \"\")\n",
-    "        self.incomplete = set(my_string).issubset(set(\"({[<\"))\n",
-    "        if self.incomplete:\n",
-    "            self.needs_completing = my_string\n",
-    "        invalid_idx = [my_string.find(rt_br) for rt_br in \")}]>\"]\n",
-    "        invalid_idx = [x for x in invalid_idx if x != -1]\n",
-    "        if invalid_idx:\n",
-    "            self.invalid = my_string[min(invalid_idx)]\n",
-    "        return self.incomplete, self.invalid\n",
+    "    def get_neighbor_coords(self):\n",
+    "        row = self.row\n",
+    "        col = self.col\n",
+    "        neighbor_coords = [\n",
+    "            (row - 1, col - 1),\n",
+    "            (row - 1, col),\n",
+    "            (row - 1, col + 1),\n",
+    "            (row, col - 1),\n",
+    "            (row, col + 1),\n",
+    "            (row + 1, col - 1),\n",
+    "            (row + 1, col),\n",
+    "            (row + 1, col + 1),\n",
+    "        ]\n",
+    "        neighbor_coords = [\n",
+    "            (r, c) for r, c in neighbor_coords if 0 <= r <= 9 and 0 <= c <= 9\n",
+    "        ]\n",
+    "        return neighbor_coords\n",
     "\n",
-    "    def complete(self):\n",
-    "        \"\"\"invalid takes precedence over incomplete, so if it\n",
-    "        is both, this code wil NOT complete an invalid line.\n",
-    "        \"\"\"\n",
-    "        if not self.incomplete:\n",
-    "            return \"\"\n",
-    "        closer = {\"(\": \")\", \"{\": \"}\", \"[\": \"]\", \"<\": \">\"}\n",
-    "        return \"\".join(closer[b] for b in reversed(self.needs_completing))\n",
+    "    def set_neighbors(self, octopi):\n",
+    "        neighbor_coords = self.get_neighbor_coords()\n",
+    "        self.neighbors = [x for x in octopi if (x.row, x.col) in neighbor_coords]\n",
+    "        return\n",
+    "\n",
+    "    def increase_nrg(self):\n",
+    "        self.nrg_level += 1\n",
+    "        return\n",
+    "\n",
+    "    def light_up(self):\n",
+    "        if self.nrg_level > 9 and not self.has_fired:\n",
+    "            self.has_fired = True\n",
+    "            self.total_flashes += 1\n",
+    "\n",
+    "            for neighbor in self.neighbors:\n",
+    "                self.propogate(neighbor)\n",
+    "\n",
+    "        return\n",
+    "\n",
+    "    def propogate(self, other):\n",
+    "        other.nrg_level += 1\n",
+    "        if other.nrg_level > 9 and not other.has_fired:\n",
+    "            other.light_up()\n",
+    "\n",
+    "    def reset_nrg(self):\n",
+    "        if self.has_fired is True:\n",
+    "            self.nrg_level = 0\n",
+    "            self.has_fired = False\n",
+    "        return\n",
     "\n",
     "\n",
     "@dataclass\n",
     "class Puzzle:\n",
     "    fname: str\n",
-    "    lines: list = None\n",
+    "    octopi: list[Octopus] = field(default_factory=list, repr=False)\n",
+    "    n: int = 0\n",
+    "    after_100: int = None\n",
+    "    first_sync: int = None\n",
     "\n",
     "    def __post_init__(self):\n",
     "        raw = Path(self.fname).open().readlines()\n",
-    "        self.lines = [Navigation(line.strip()) for line in raw]\n",
+    "        levels = [[int(x) for x in line.strip()] for line in raw]\n",
+    "\n",
+    "        octopi = []\n",
+    "        for row_num, row in enumerate(levels):\n",
+    "            for col_num, lvl in enumerate(row):\n",
+    "                octopi.append(Octopus(row_num, col_num, lvl))\n",
+    "\n",
+    "        self.octopi = octopi\n",
+    "        for octopus in self.octopi:\n",
+    "            octopus.set_neighbors(octopi)\n",
+    "        return\n",
+    "\n",
+    "    def single_round(self, part_2=False):\n",
+    "\n",
+    "        for octps in self.octopi:\n",
+    "            octps.increase_nrg()\n",
+    "\n",
+    "        for octps in self.octopi:\n",
+    "            octps.light_up()\n",
+    "\n",
+    "        if self.n == 99:\n",
+    "            self.after_100 = sum([octps.total_flashes for octps in self.octopi])\n",
+    "\n",
+    "        if part_2:\n",
+    "            total_diff_nrg = len(set(x.nrg_level for x in self.octopi))\n",
+    "            if total_diff_nrg == 1:\n",
+    "                self.first_sync = self.n\n",
+    "\n",
+    "        for octps in self.octopi:\n",
+    "            octps.reset_nrg()\n",
+    "        self.n += 1\n",
+    "        return\n",
     "\n",
     "    def part_1(self):\n",
-    "        todo = [l for l in self.lines if l.invalid and not l.incomplete]\n",
-    "        scoring = {\")\": 3, \"]\": 57, \"}\": 1197, \">\": 25137}\n",
-    "        return sum(scoring[line.invalid] for line in todo)\n",
+    "        for _ in range(100):\n",
+    "            self.single_round()\n",
+    "\n",
+    "        return self.after_100\n",
     "\n",
     "    def part_2(self):\n",
-    "        todo = [l for l in self.lines if l.incomplete and not l.invalid]\n",
-    "        scoring = {\")\": 1, \"]\": 2, \"}\": 3, \">\": 4}\n",
+    "        while self.first_sync is None:\n",
+    "            self.single_round(part_2=True)\n",
+    "            if self.n > 1000:\n",
+    "                print(\"This is going too long.\")\n",
+    "                break\n",
     "\n",
-    "        scores = []\n",
-    "        for l in todo:\n",
-    "            r_brackets = l.complete()\n",
-    "            score = 0\n",
-    "            for br in r_brackets:\n",
-    "                score *= 5\n",
-    "                score += scoring[br]\n",
-    "            scores.append(score)\n",
-    "\n",
-    "        return median(scores)\n",
+    "        return self.first_sync\n",
     "\n",
     "\n",
     "def run_tests(p1_ans=T1_ANS, p2_ans=T2_ANS, fname=\"tests.txt\"):\n",
