--- a/2021/day13/scratchwork.ipynb
+++ b/2021/day13/scratchwork.ipynb
@@ -14,86 +14,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "cc1a022d-5e8b-4697-8940-71bb72f90f38",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "from puzzle import Puzzle, Cave"
+    "from puzzle import Puzzle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "1d9b8c88-c8e5-483f-808b-273ccf6d2fc9",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{Cave(name='start', revisit=False, seen=True), Cave(name='c', revisit=False, seen=False), Cave(name='end', revisit=False, seen=False), Cave(name='b', revisit=False, seen=False)}\n",
-      "closing A\n",
-      "------- All paths explored ------\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "1"
+       "(15, 11)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "puz = Puzzle(\"tests.txt\")\n",
-    "puz.find_many()"
+    "puz.grid.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "011edae3-4272-431a-99e6-f704cf0bfeea",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['start,A,end']"
+       "17"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "puz.all_path_routes"
+    "puz.part_1()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "id": "0c881d5f-b5e2-4ff7-b343-a69870cfd81f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#####\n",
+      "#   #\n",
+      "#   #\n",
+      "#   #\n",
+      "#####\n",
+      "     \n",
+      "     \n"
+     ]
+    }
+   ],
+   "source": [
+    "puz.part_2()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "488ffc52-e34b-4dc9-ab13-0bbb3b88df3b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(894, 1310)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "fullpath = \"start,A,c,A,b,A,end\"\n",
-    "\n"
+    "puz = Puzzle(\"inputs.txt\")\n",
+    "puz.grid.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "id": "dbdfd488-8355-4ed3-8d41-df3851ec9929",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "879"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "puz.part_1()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "c54f6918-a186-4a4a-a2f1-0bc68e04c3f0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#########  ###### ############# ####### \n",
+      "##########  ############################\n",
+      " #########   ###########################\n",
+      "### ############ ##########  ### #####  \n",
+      "### ############# ########   #########  \n",
+      "#### ############## ######   ########   \n"
+     ]
+    }
+   ],
    "source": [
-    "str(tmp)"
+    "puz.part_2()"
    ]
   },
   {
@@ -552,7 +612,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
