fix template code & put inside dedicated folder

--- a/2021/day_template/populate_folders.ipynb
+++ b/2021/day_template/populate_folders.ipynb
@@ -2,43 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "f6dcdc33-adf0-48f3-9a1a-5af7a2c23748",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['day1',\n",
-       " 'day2',\n",
-       " 'day3',\n",
-       " 'day4',\n",
-       " 'day5',\n",
-       " 'day6',\n",
-       " 'day7',\n",
-       " 'day8',\n",
-       " 'day9',\n",
-       " 'day10',\n",
-       " 'day11',\n",
-       " 'day12',\n",
-       " 'day13',\n",
-       " 'day14',\n",
-       " 'day15',\n",
-       " 'day16',\n",
-       " 'day17',\n",
-       " 'day18',\n",
-       " 'day19',\n",
-       " 'day20',\n",
-       " 'day21',\n",
-       " 'day22',\n",
-       " 'day23',\n",
-       " 'day24',\n",
-       " 'day25']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "day01 is already there\n",
+      "day02 is already there\n",
+      "day03 is already there\n",
+      "day04 is already there\n",
+      "day05 is already there\n",
+      "day06 is already there\n",
+      "day07 is already there\n",
+      "day08 is already there\n",
+      "day09 is already there\n",
+      "day10 is already there\n",
+      "day11 is already there\n",
+      "day12 is already there\n",
+      "day13 is already there\n",
+      "day14 is already there\n",
+      "day15 is already there\n",
+      "day16 is already there\n",
+      "day17 is already there\n",
+      "day18 is already there\n",
+      "day19 is already there\n",
+      "day20 is already there\n",
+      "day21 is already there\n",
+      "day22 is already there\n",
+      "day23 is already there\n",
+      "day24 is already there\n",
+      "day25 is already there\n"
+     ]
     }
    ],
    "source": [
@@ -46,46 +43,21 @@
     "import shutil\n",
     "\n",
     "\n",
-    "p = Path(\".\").resolve()\n",
+    "p = Path(\"..\").resolve()\n",
     "\n",
-    "source = Path().glob(\"*.*\")\n",
-    "source = list(\n",
-    "    x for x in source \n",
-    "    if (\"checkpoints\" not in str(x) and \"populate\" not in str(x))\n",
-    ")\n",
+    "source = ['inputs.txt', 'puzzle.py', 'scratchwork.ipynb', 'tests.txt']\n",
     "\n",
-    "dir_names = [\"day\" + str(x) for x in range(1, 26)]\n",
+    "dir_names = [\"day\" + str(x).zfill(2) for x in range(1, 26)]\n",
     "\n",
-    "for dirname in dir_names:\n",
-    "    new_folder = p / dirname\n",
+    "for dir_name in dir_names:\n",
+    "    new_folder = p / dir_name\n",
     "    try:\n",
     "        new_folder.mkdir(parents=True, exist_ok=False)\n",
     "        for file in source:\n",
-    "            shutil.copy(str(file), new_folder / str(file))\n",
+    "            shutil.copy(file, new_folder / str(file))\n",
     "    except FileExistsError:\n",
     "        print(f\"{dir_name} is already there\")\n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "24fc171d-38b8-4d03-b411-bc0a6770b195",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "WindowsPath('C:/Users/dakas/projects/advent-of-code/2021')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p"
    ]
   },
   {
