--- a/2021/day15/scratchwork.ipynb
+++ b/2021/day15/scratchwork.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7d5c1c53-6cbe-4c53-93d3-3dc5ba5c91af",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "cc1a022d-5e8b-4697-8940-71bb72f90f38",
    "metadata": {},
    "outputs": [],
@@ -25,21 +25,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "1d9b8c88-c8e5-483f-808b-273ccf6d2fc9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Puzzle(fname='inputs.txt')"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "puz = Puzzle(\"tests.txt\")\n",
+    "puz = Puzzle(\"inputs.txt\")\n",
     "puz"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "id": "4e5995d2-913a-45fe-9fab-62ad0a410f66",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3, 9, 9, ..., 8, 9, 3],\n",
+       "       [5, 1, 6, ..., 6, 8, 4],\n",
+       "       [9, 3, 9, ..., 8, 7, 2],\n",
+       "       ...,\n",
+       "       [2, 1, 6, ..., 8, 9, 8],\n",
+       "       [5, 9, 4, ..., 4, 8, 4],\n",
+       "       [5, 1, 7, ..., 6, 3, 8]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "puz.maze"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "011edae3-4272-431a-99e6-f704cf0bfeea",
+   "id": "610b48f6-3401-4135-a0e2-8741e24aa239",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "011edae3-4272-431a-99e6-f704cf0bfeea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1100"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "puz.part_1()"
    ]
@@ -64,71 +121,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "e2a7f23f-8dbf-4bd5-b0f7-91e245dcb340",
+   "execution_count": null,
+   "id": "c1331053-7169-4f3b-9fc1-c05bb02a11b0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['day15',\n",
-       " 'day16',\n",
-       " 'day17',\n",
-       " 'day18',\n",
-       " 'day19',\n",
-       " 'day20',\n",
-       " 'day21',\n",
-       " 'day22',\n",
-       " 'day23',\n",
-       " 'day24',\n",
-       " 'day25']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dir_names = [\"day\"+str(x) for x in range(15, 26)]\n",
-    "dir_names"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "f40fc80c-e7ee-4f21-ada1-7edabeba05e4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[WindowsPath('inputs.txt'), WindowsPath('puzzle.py'), WindowsPath('scratchwork.ipynb'), WindowsPath('tests.txt')]\n"
-     ]
-    }
-   ],
-   "source": [
-    "from pathlib import Path\n",
-    "\n",
-    "p = Path(\"..\").resolve()\n",
-    "\n",
-    "source = Path().glob(\"*.*\")\n",
-    "source = list(x for x in source if \"checkpoints\" not in str(x))\n",
-    "print(source)\n",
-    "\n",
-    "# for dirname in dir_names:\n",
-    "#     new_folder = p / dirname\n",
-    "#     new_folder.mkdir(parents=True)\n",
-    "    for file in source:\n",
-    "        shutil.copy(str(file), )\n",
-    "    "
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55ceb89a-0d41-436f-9b85-41cadd467708",
+   "id": "e9ffbb1e-277b-4aa3-9eeb-5abac8992df6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39beb12e-cf85-4191-ae4e-3398d495d828",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -150,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
