--- a/2021/day09/scratchwork.ipynb
+++ b/2021/day09/scratchwork.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "7d5c1c53-6cbe-4c53-93d3-3dc5ba5c91af",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "cc1a022d-5e8b-4697-8940-71bb72f90f38",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "97b12a2b-61ae-49a5-b172-7d930745f80b",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
        "504"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "id": "4ecadcf9-f1e3-44bc-84a0-98f816e9c2b1",
    "metadata": {},
    "outputs": [
@@ -58,13 +58,131 @@
        "1558722"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "puz.part_2()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c99eb2c5-1c28-48b1-b26e-770c664dfd90",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "****** ***  *  ****** ******** *** *** ********  ****** ***** ** **** ***** ******* *********** *** \n",
+      "***** ***  *** ******* ****** * * * * ******** ** ***  *******  ******  ** * ***** ************* ***\n",
+      "**** **** ***** ***** **** * *** ***   *********** * * ******   ********  *******  ***********  ****\n",
+      "**  **********   ***  *** * ********* ***********  * ********* ******* **  ***** ***********  ******\n",
+      "* * *********** *** ** * **  *******   ********* **  ***** **** **********   **** * ********* ***** \n",
+      " *** *********** * **** ***** ******* *********** *** **  * ** ********** * ****** ***********  ** *\n",
+      "**** **********   **** * **** *****  *  * ****** *****  ****    ******** *** *****  ******* * **  **\n",
+      " ** **********  * **** *******  *** ** * * ***  * ***  ****** ********* ***** * * *  * *** * * * *  \n",
+      "* *  **  ***** *** ** ******* ** ***  *****  * *** * * *****   ********* *****  * *** *** ****  ****\n",
+      "** **   ******* ***  ************ *  *******  ***   *** *****    ****** ****  ** ***** * ***** *****\n",
+      "* ****** ***   *** **  *********    ******** *****  **** ***** * * *** **** ***** ****  ***** ******\n",
+      " ******   * ******  * * ******* * *   ****  ***** ******* *** **   *   **** **** * ** ****** *******\n",
+      "*  *** * * ********* ********* ***** ******* *** ********* * ** * * *   ** ********  ****** ********\n",
+      "** ** ***** **** ** *  ******** ***  ******** * *********** ** *******   * *******  ******** *******\n",
+      "***  ******* ** *  *** ******* **** ********     ***********  ********* * ***** ***  *****    ***** \n",
+      "*** *********  *** **** * *** **** ***********  ********* *    ***** * *** *** * * ** * ** *** *** *\n",
+      "** ****** ** ****** ****   * ****** *********  ********* *  * ******  ***** * *** **** ** ***** *  *\n",
+      "* ********  ****** * ***  * ******** ******     *********** *  * ***** ** ** *** * **** *  ***** ** \n",
+      "*   ******* *********    ***********  *  *   *   * ******* ****  **** ** *     **** **   *  ******* \n",
+      "   * ****    *******  **  * *********  **   *** *   *** * ******   *    *** ******* * * ************\n",
+      " **** *** *   *** *  ***** ********* ***** ********* * * ****** *     **** ******* * *** ***********\n",
+      "******   ** *  * *  ******* *** * * *****  ******** * ************  ******* ***** ******* **********\n",
+      "******* ** ***   **  * ***** * * * ***** * ******* *** ************  ****** ***** ******** *********\n",
+      "****** ** * * ***  ** * ***** ** * **** *** ***** ***** *******  *  *  *** ***** ********    ****** \n",
+      "*******  ******** * **** *****  * *****  * * *** ***** ******* **   * *     **** ********* ** ****  \n",
+      "**** *  ******** **** *** ***** ** * * ****** **  ***** ***** ** **** **** * ** **********   ****  *\n",
+      "*****    ******** ******** *** **** ** ***** ** *  * *  * ** ** ********* ***  *************  *** **\n",
+      " * *   ** ****** ********** *  ** **  *******   ***   ** *** * * ********* **** *********** *  * ***\n",
+      "* *   **** * ** **********   **  * * ******** ******* *** * * ************* **** * ******* ** * ****\n",
+      "**** * ****    **********  **** *** ******** ******** **** *** * ********** * * *   * *** ** *** ***\n",
+      "*** *** **** *  ********** ********  * **** ********** ** *****   ******** * * ****  * * ******** **\n",
+      "** ***** ** ***   *** ***** ********  **** ************ * ****** ********  ********* ** ******** ***\n",
+      "* ******* * **** * * * *** ******** *  *  *************  ****** ******** *** ********  ********** **\n",
+      " *******   * ** *** *** * ***********   ** ************* ******* ** ***** **********  *********  ***\n",
+      "* ** **   *** * *******    * ******  * ** ************  ** ****** *  * * ************  ******** ****\n",
+      "**  *  *** *   ******** *   * **** **** ** ************   * ****   * *    ************    ***    ***\n",
+      "** ***  ***** ***********  *** ** ****** ** * *********   **      ***    ************  * ***  *   **\n",
+      "  *****  ****  ************ *** *  **** * ** ***** ***  *******  * *** ** **********  *** *  *** * *\n",
+      "* ****  * ** ************* ***    ********  * *** * *  ******* * ****** ** ********  *****  ******* \n",
+      "****** ** * ************** **** ******* * **** * ***  *********** ***** *** ****** * ******* *****  \n",
+      "****** ***   * ********** ****** ******  **** * ***  *********** ***** *****  **** ** ****** ****** \n",
+      "****  * ****  *********** ******* ***** **** ***** ** ****** *  ****** **** *  *  **** ***** ***** *\n",
+      "*** * *******  ********* *** ***   * * **** ***** **** **** * *  ****** ** ***  ***** ******  * * **\n",
+      " *  **********  ** ** * ***** * **    ****** *** ******  * **** * ***** * **** ******* **** *  * ***\n",
+      "* **********  ** * * *   * *   ****  ******** * *  ****** ******** ***     ** *******   ** *** ** **\n",
+      "** *********** **   ***   *   **** * ** * ***  *** ***** * ********     *** ** *** *   *  *******  *\n",
+      "***  ******** **  **** * *** ********  * * *    * ***** *************  ******** * *   ***  ******   \n",
+      "**** ** ** *  * ***** ****** *******  ** **  *   ***** *************** ********* *** ***** ***** ** \n",
+      "***** *   * **   * ***  ***** ****** ******* * *  ***** *************  *********  * ****** *********\n",
+      "****** ** *****   ***   ***** ***** *************   ** ************* **  ******* * ******** ***** * \n",
+      "********** *****     * ***** *****  ************  ** *  ************ ** * ***** *** ****** *******  \n",
+      "********  *****    **** *** *  *  *************** *** ** ****** ** * * *** ** * *********** * *** * \n",
+      "******** ******* ******* *  *** ** * ****** * ** ***** ** **** ***    *** *  * * * *******   * * ***\n",
+      "***  *  ******* ******* *  * *****  ********  * ***** *    *   **    ****** ***** ********** ** ****\n",
+      " ***   ********  ** *   * *** *** ** *********   **** ***   *** *  *  **** ******* ** *** * ********\n",
+      "* * *** ****** **    *** ***** * **** ******* ** * * ***** ***** **** ***** ***** * ******   *******\n",
+      "** ***** **** ***** *** ******  ****** ***** **** * ******* *******  ******* * * ** * ***   ********\n",
+      "********* ** ***** ***** ***  ** ******   * **** ********** ****** * ********   * *  * *   *********\n",
+      "*******  ** ***** ***** ***** *   **** *** **** ************  *** *** **** **  *** ***    **********\n",
+      "******** *  ****** ***** ***** *   ** ** ***** *************** * ***** * * *  ***** *****  *********\n",
+      "******* * *   * * * ***** *** ***   *   * ***** *************** *******   *  ******* ******  *   ***\n",
+      "****** ***** * * ********* * *****     *** *** *************** * ******* **** * *** ******  * **  * \n",
+      "* * * *********** ********* *******   ***** *** ************  *** ***** ****    *  ****** *******  *\n",
+      " * * ************* ********* *****   ****   ** * ********** **** ****** ***** ** * * ****  ******* *\n",
+      "***** ************* ** * ** *** *  *********  ***  ****** *  ** ******* **** ** **  * ** * ******  *\n",
+      "****** *********** * * * * * * * * ********** **** * ***** ** *  ***** ** * ** * *****  *********** \n",
+      "****** ******** * ***   * ***  **** ****** * **** *   **  **** ** ***  *** ** ******* * **********  \n",
+      "***** ******** *   *** *** * ******* ****** *********   ** ****  *      *  * *********** ********** \n",
+      "****** ******* ** * *   * * ********* ****** **** *   ***** *** ***** ** ** * ********* ************\n",
+      "****   ****** *** **   * *************  *** **** * *** ***** * ******* *** ***********  ************\n",
+      "*** *** **** ******** *** ********* * ** *   *** ****** ***** ********* * *********** ** * ****** * \n",
+      "** *** * **** ****** ***** ********  ** * *   ** ***** ***** * ******** ** * ******* * ** * * **** *\n",
+      "* *** *** * * ****** ***** ********* ** ****   * ****** *** ************ ** ******* *** ****    * **\n",
+      " *** ***** * ******  ***** ******** ** * ****   ******** **  ************ **  **** ***** ** * *  ***\n",
+      "***** ******   *** **  **** ********  *****  * **********  ************* **** * * *******  ***** ***\n",
+      "**** *****  ** *** ** * *  * *** ** ****** * ** **********  ********* * ** *   * ********** ***** **\n",
+      "***** *** ***** * ** *** **** ***  * ***** **  ********** ** ********* ** * * ** *********** ***** *\n",
+      "** *** * ******* *** ** * ** * * **** *** ** ** **** * * **** *********  ***** *  *********  ****** \n",
+      "* *** * * ******* ** *****  *** ****** * **** ** *****   ***** ******   * ***** ********* *** **** *\n",
+      " *   ***** *******  ******* ** ******** ******  *  ** * ****** *****    ******** ********* *  *** **\n",
+      "** * ****** * ***  ******* * *********** ****** ***  ** ******* * *** *********** *** *****  * * ***\n",
+      "* *** ******     ** ****  ** **********  * *** ***** *** * ***** * *    ******** * * *****  *** ****\n",
+      " ***** ****** * ** * * * **** **********  ***  ****** *** *********  * *   ****  ** * * *  ***** ***\n",
+      "******* **** ***   ** * ******  **** ** ** *    **** *** *********** * * ***** ** * **   ******** **\n",
+      "****** *  * **** *************** ****  ** * * ***** ***** * ******* *** * *** **** * * *********** *\n",
+      "********   ****** *************  *** *** ***** ** * *****  ******* ******  * **** **  * *********   \n",
+      "* ***** * ****** ************* ** * ***  ******  * * *****  *** * ****** *  ****  ** *************  \n",
+      " ***** *** ****** * ***********      * ******* ****** *** ** *    * *** ******* ***** ************* \n",
+      "  *** * *** ******   ******* * **   *    **** ******   * **** *    * *** ***** ***** *************  \n",
+      "**   ******* ****** ***** *** **   *** ** ** ***** **   ******* * *** ** ******   *** ************* \n",
+      "** ********** ****** *** * * ** * ***** *  *  *   *    ******* ******* * ****** ****** *  *******  *\n",
+      " ** ********** **** * * *** ** ********* ** **  * * * * * *** ******** *  *  * *  ***** ******** ***\n",
+      "** ************ ** ***   **** ********* ****** *** ***** * * ******** * *  *  ** ******* ** ***   **\n",
+      "*** *********   *  ***  * ** * ********* **** ***** *** ***   ****** ******** * ********* *  * * * *\n",
+      "**** *********    *** ****  *********** * ** ******* * *** **  *  * ********** * ********  ** ***** \n",
+      "*** * *********    * ** ** *************** *  *****   ********   **  * *****  *** ****** ***********\n",
+      "*** **********  *   ******* *************   ********** **** * ***  ********** *** ***** ** ****** * \n",
+      "*** ***** ***  *** *********  ********** * * ********** **** *** ** ******** ***** *** * ********* *\n",
+      " *** ***** * * **** *  ******* ******** ** *********** **** ***** ** * ** * ******* * *** ******* **\n",
+      "***** * *   *** **** ********* ***** * ** *************  * ******* ** ***  *******   ***   * **  ***\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in puz.basins:\n",
+    "    print(\"\".join(\" \" if x == 0 else \"*\" for x in row))"
    ]
   },
   {
@@ -367,7 +485,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -381,7 +499,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
