--- a/2021/day24/scratchwork.ipynb
+++ b/2021/day24/scratchwork.ipynb
@@ -36,11 +36,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "46017f6c-a42f-4e2d-909b-6ff6bb921715",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a3', 'a3', 'a4', 'a7', 'b5', 'b5', 'c3', 'c5', 'c5', 'd2', 'd3', 'd5']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp = sorted(\"\"\"d2 c3 d3 a7 d5 c5 a4 c5 b5 b5 a3 a3\"\"\".split(\" \"))\n",
+    "tmp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a258e661-4635-4486-8d7d-8beb85c3df83",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11417"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min_hops = [11, 10, 11, 10]\n",
+    "abcd_hops = [17, 10, 13, 10]\n",
+    "\n",
+    "sum([hops * score for hops, score in zip(abcd_hops, [1,10,100,1000])])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "011edae3-4272-431a-99e6-f704cf0bfeea",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "puz.part_1()"
    ]
   },
@@ -150,7 +197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
